add id's to the components

--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -130,9 +130,12 @@
                                 </h:selectOneMenu>
 
                             </li>
-
+                            <h:messages id="errorMessages" globalOnly="true" infoClass="alert alert-info" errorClass="alert alert-danger"
+                                        render="errorMessages" />
 
                         </h:panelGroup>
+
+
 
 
                     </ul>
