updated Facultylist to work with the Validator

--- a/src/main/webapp/views/admin/facultylist.xhtml
+++ b/src/main/webapp/views/admin/facultylist.xhtml
@@ -34,28 +34,27 @@
 							action="#{facultyBacking.add}" />
 						<h:message for="newFaculty" styleClass="message" />
 					</div>
+				</h:form>
 
-					<h:message id="global" styleClass="message" />
-					<h:dataTable id="facultyTable" value="#{facultyBacking.faculties}" var="faculty"
-						border="1"  class="table">
-						<f:facet name="header">
-							<h:outputText value="Faculties" styleClass="text-center" />
-						</f:facet>
-						<h:column>
-						<h:outputLabel value="#{faculty.name}" />
-						</h:column>
-						<h:column>
-							<h:commandButton update="facultyTable" value="Remove"
-								action="#{facultyBacking.remove(faculty)}" class="btn btn-danger" />
-						</h:column>
-						<h:column>
+				<h:message id="global" styleClass="message" />
+				<h:dataTable id="facultyTable" value="#{facultyBacking.faculties}"
+					var="faculty" border="1" class="table">
+					<f:facet name="header">
+						<h:outputText value="Faculties" styleClass="text-center" />
+					</f:facet>
+					<h:column>
+						<h:form>
 							<h:inputText value="#{faculty.name}" required="true"
 								validator="UniqueFacultyNameValidator" />
+							<h:commandButton update="facultyTable" value="Remove"
+								action="#{facultyBacking.remove(faculty)}"
+								class="btn btn-danger" />
 							<h:commandButton update="facultyTable" value="Rename"
-								action="#{facultyBacking.update(faculty)}"  class="btn btn-primary"/>
-						</h:column>
-					</h:dataTable>
-				</h:form>
+								action="#{facultyBacking.update(faculty)}"
+								class="btn btn-primary" />
+						</h:form>
+					</h:column>
+				</h:dataTable>
 
 			</div>
 
