--- a/src/main/webapp/views/admin/facultylist.xhtml
+++ b/src/main/webapp/views/admin/facultylist.xhtml
@@ -7,7 +7,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
-	<title>Faculties</title>
+	<title>Fakultäten</title>
 	<link href="${request.contextPath}/resources/css/style.css"
 		rel="stylesheet" type="text/css" />
 
