--- a/src/main/webapp/views/anonymous/setNew.xhtml
+++ b/src/main/webapp/views/anonymous/setNew.xhtml
@@ -2,43 +2,49 @@
 
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <f:view>
-	<f:metadata>
-		<f:viewAction action="#{setNewPasswordBacking.setup}" />
-		<f:viewParam name="token" value="#{setNewPasswordBacking.token}" />
-	</f:metadata>
+    <f:metadata>
+        <f:viewAction action="#{setNewPasswordBacking.setup}"/>
+        <f:viewParam name="token" value="#{setNewPasswordBacking.token}"/>
+    </f:metadata>
 
-	<h:head>
-		<title>Set a new Password</title>
-		<link href="${request.contextPath}/resources/css/style.css"
-			rel="stylesheet" type="text/css" />
+    <h:head>
+        <title>Set a new Password</title>
+        <link href="${request.contextPath}/resources/css/style.css"
+              rel="stylesheet" type="text/css"/>
 
-		<link
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			rel="stylesheet" />
-	</h:head>
+        <link
+                href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+                rel="stylesheet"/>
+    </h:head>
 
-	<h:body>
-		<h:form id="setNew">
-			<h2>Set Password</h2>
+    <h:body>
+        <ui:composition template="../anonymous/template.xhtml">
+            <ui:define name="mainContent">
+                <div class="container">
+                <h:form id="setNew">
+                    <h2>Set Password</h2>
+                    <div class="form-group">
+                    <h:outputLabel for="password-iscrt" value="New Password:"/>
+                    <h:inputSecret id="password-iscrt"
+                                   value="#{setNewPasswordBacking.password}" required="true"
+                                   validator="PasswordValidator"  styleClass="form-control"/>
+                    </div>
+                    <h:commandButton value="Submit"
+                                     action="#{setNewPasswordBacking.save}" styleClass="btn btn-primary"/>
 
-			<h:outputLabel for="password-iscrt" value="New Password:" />
-			<h:inputSecret id="password-iscrt"
-				value="#{setNewPasswordBacking.password}" required="true"
-				validator="PasswordValidator" />
-
-			<h:commandButton value="Submit"
-				action="#{setNewPasswordBacking.save}" />
-
-			<h:message for="password-iscrt" styleClass="message" />
-		</h:form>
-		<h:message id="generalMessage" styleClass="message" />
-		<h:button value="Back to Login" action="/view/anonymous/login" />
-	</h:body>
+                    <h:message for="password-iscrt" styleClass="message"/>
+                </h:form>
+                <h:message id="generalMessage" styleClass="message"/>
+                <h:button value="Back to Login" action="/view/anonymous/login" styleClass="btn btn-secondary"/>
+                </div>
+            </ui:define>
+        </ui:composition>
+    </h:body>
 
 </f:view>
 </html>
